# voice

./: .gitattributes  .gitignore  Cargo.toml  INSTALL.md  env.sh
analyzer_app/: Cargo.toml
analyzer_app/src/: main.rs  mandelbrot.rs
audio/: Cargo.toml
audio/src/: dsp.rs  lib.rs  synth.rs
audio/src/dsp/: fft.rs  filter.rs  mod.rs
audio/src/stream/: buffer.rs  executor.rs  input.rs  mod.rs  output.rs  pipeline.rs  transform.rs
charts/: Cargo.toml
charts/src/: lib.rs
notebook/: Cargo.toml  example.ipynb  fft.ipynb
notebook/src/: lib.rs
src/: dsp.rs  levels.rs  main.rs  mandelbrot.rs  stream.rs
src/stream/: buffer.rs  executor.rs  input.rs  mod.rs  wav.rs
synth_app/: Cargo.toml
synth_app/src/: main.rs
ui/: Cargo.toml
ui/src/: frequencies.rs  levels.rs  main.rs
