[package]
name = "analyzer_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
audio.workspace = true
charts.workspace = true
async-channel.workspace = true
futures.workspace = true
iced.workspace = true
plotters.workspace = true
plotters-iced.workspace = true
