[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
audio = { path = "../audio" }
charts = { path = "../charts" }
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3.30"
iced = { version = "0.12.1", features = ["advanced", "canvas"] }
plotters = "0.3.6"
plotters-iced = "0.10.0"
